<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:padding="5dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtEditName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnStartQuiz"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center|center_horizontal"
        android:autofillHints="Your Name"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtViewHighscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/txtEditName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/Highscore"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnStartQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:text="@string/StartQuiz" />

</RelativeLayout>